--- a/inventory_report.html
+++ b/inventory_report.html
@@ -34,12 +34,10 @@
 					<th>售货机名称</th>
 					<th>售货机编号</th>
 					<th class="sales_body_table_cargo">货道<span>↑</span></th>
-					<th>货道类型</th>
 					<th>商品名称</th>
 					<th>商品编号</th>
-					<th>商品数量</th>
-					<th>商品价格</th>
-					<th>补入时间</th>
+					<th>库存数量</th>
+					<th>商品状态</th>
 				</tr>
 				<tbody class="sales_body_table_tbody">
 				</tbody>
