--- a/machine_board.html
+++ b/machine_board.html
@@ -14,12 +14,12 @@
 	<script type="text/javascript" src="js/header.js"></script>
 	<div class="user_home">
 		<div class="user_head">
-			<table>
+			<!-- <table>
 				<tr>
 					<td>区域分组</td>
 					<td><input id="user_head_group" class="user_head_grouping" type="text" readonly="readonly"/><b></b></td>
 				</tr>
-			</table>
+			</table> -->
 			<!-- <table>
 				<tr>
 					<td>输入查询</td>
@@ -50,18 +50,18 @@
 					</div>
 				</div>
 				<div class="user_body_right_foot">
-					<div class="user_body_right_foot_list" data-menuid="204001">
+					<div class="user_body_right_foot_list" data-menuid="304001">
 						<div class="user_body_right_foot_item">
 							<p>基础信息</p>
 							<table>
 								<tr>
-									<td>运营方：<span>*</span></td>
+									<td>所属店铺：<span>*</span></td>
 									<td><input id="board_operator" class="board_select" readonly="readonly" type="text"/><b></b></td>
 								</tr>
-								<tr>
+								<!-- <tr>
 									<td>所属区域：<span>*</span></td>
 									<td><input id="board_purview" class="user_head_grouping" style="cursor: pointer;" readonly="readonly" type="text"/><b></b></td>
-								</tr>
+								</tr> -->
 								<tr>
 									<td>设备编号：<span>*</span></td>
 									<td><input id="board_machcode" oninput="this.value=this.value.replace(/[^\w_]/g,'');" type="text"/></td>
@@ -78,7 +78,7 @@
 									<td>MAC地址：<span>*</span></td>
 									<td><input id="board_mac" type="text"/></td>
 								</tr>
-								<tr>
+								<!-- <tr>
 									<td style="min-width: 109px;">合作方式：<span>*</span></td>
 									<td><input id="board_concur" class="board_select" readonly="readonly" type="text"/><b></b></td>
 								</tr>
@@ -93,7 +93,7 @@
 								<tr id="board_rentends">
 									<td>租赁到期日期：<span>*</span></td>
 									<td><input id="board_rentend" class="board_date" style="cursor: pointer;" readonly="readonly" type="text"/><b></b></td>
-								</tr>
+								</tr> -->
 								<tr>
 									<td>备注：</td>
 									<td><textarea id="board_mark"></textarea></td>
