--- a/machine_status.html
+++ b/machine_status.html
@@ -56,14 +56,14 @@
 					<td class="machine_home_foot_header_item">设备状态</td>
 					<td class="machine_home_foot_header_item">销售状态</td>
 					<td class="machine_home_foot_header_item">温度</td>
-					<td class="machine_home_foot_header_item">信号强度</td>
+					<!-- <td class="machine_home_foot_header_item">信号强度</td> -->
 					<td class="machine_home_foot_header_item">脱机12小时</td>
 					<td class="machine_home_foot_header_item">脱机24小时</td>
-					<td class="machine_home_foot_header_item">最后交易状态</td>
+					<!-- <td class="machine_home_foot_header_item">最后交易状态</td>
 					<td class="machine_home_foot_header_item">12小时未交易</td>
-					<td class="machine_home_foot_header_item">24小时未交易</td>
-					<td class="machine_home_foot_header_item">现下位机版本/要求下位机版本</td>
-					<td class="machine_home_foot_header_item">现客户端版本/要求客户端版本</td>
+					<td class="machine_home_foot_header_item">24小时未交易</td> -->
+					<!-- <td class="machine_home_foot_header_item">现下位机版本/要求下位机版本</td>
+					<td class="machine_home_foot_header_item">现客户端版本/要求客户端版本</td> -->
 					<td class="clear"></td>
 				</tr>
 			</table>
