--- a/user_manage.html
+++ b/user_manage.html
@@ -16,7 +16,7 @@
 		<div class="user_head">
 			<table>
 				<tr>
-					<td>区域分组</td>
+					<td>运营商</td>
 					<td><input id="user_head_group" class="user_head_grouping" type="text" readonly="readonly"/><b></b></td>
 				</tr>
 			</table>
@@ -50,26 +50,26 @@
 					</div>
 				</div>
 				<div class="user_body_right_foot">
-					<div class="user_body_right_foot_list" data-menuid="202001">
+					<div class="user_body_right_foot_list" data-menuid="302001">
 						<div class="user_body_right_foot_item">
 							<p>基础信息</p>
 							<table>
-								<tr>
+								<!-- <tr>
 									<td>运营方：<span>*</span></td>
 									<td><input id="user_operator" style="cursor: pointer;" class="user_head_operator" type="text" readonly="readonly"/><b></b></td>
-								</tr>
+								</tr> -->
 								<tr>
-									<td>权限范围：<span>*</span></td>
+									<td>所属店铺：<span>*</span></td>
 									<td><input id="user_purview" style="cursor: pointer;" class="user_head_grouping" type="text" readonly="readonly"/><b></b></td>
 								</tr>
 								<tr>
 									<td>姓名：<span>*</span></td>
 									<td><input id="user_name" type="text"/></td>
 								</tr>
-								<tr>
+								<!-- <tr>
 									<td>职位：<span>*</span></td>
 									<td><input id="user_job" type="text"/></td>
-								</tr>
+								</tr> -->
 								<tr>
 									<td>账号：<span>*</span></td>
 									<td><input id="user_account" onkeyup="this.value=this.value.replace(/[^\w_]/g,'');" type="text"/></td>
@@ -110,7 +110,7 @@
 						</div>
 						<div class="clear"></div>
 					</div>
-					<div class="user_body_right_foot_list" data-menuid="202002">
+					<div class="user_body_right_foot_list" data-menuid="302002">
 						<div class="user_body_right_foot_item">
 							<p>权限分配</p>
 							<div class="user_body_right_foot_item_panel">
@@ -118,7 +118,7 @@
 						</div>
 						<div class="clear"></div>
 					</div>
-					<div class="user_body_right_foot_list" data-menuid="202003">
+					<div class="user_body_right_foot_list" data-menuid="302003">
 						<div class="user_body_right_foot_item">
 							<p>删除用户</p>
 							<table>
