--- a/machine.html
+++ b/machine.html
@@ -51,12 +51,12 @@
 					</div>
 				</div>
 				<div class="user_body_right_foot">
-					<div class="user_body_right_foot_list" data-menuid="301001">
+					<div class="user_body_right_foot_list" data-menuid="401001">
 						<div class="user_body_right_foot_item">
 							<p>基础信息</p>
 							<table>
 								<tr>
-									<td>所属分组：<span>*</span></td>
+									<td>所属店铺：<span>*</span></td>
 									<td><input id="machine_grouping" class="user_head_grouping" style="cursor: pointer;" readonly="readonly" type="text"/><b></b></td>
 								</tr>
 								<tr>
@@ -95,258 +95,8 @@
 						</div>
 						<div class="clear"></div>
 					</div>
-					<div class="user_body_right_foot_list" data-menuid="301002">
-						<div class="user_body_right_foot_item">
-							<p>货道配置</p>
-							<div class="user_body_right_foot_item_road user_body_right_foot_item_roada">
-								<div class="user_body_right_foot_item_roada_top">
-									<button class="user_body_right_foot_item_roada_btn">添加货道</button>
-								</div>
-								<div class="user_body_right_foot_item_roada_bottom">
-									<table class="user_body_right_foot_item_roada_table">
-										<thead>
-											<tr>
-												<td>货道行</td>
-												<td>货道类型</td>
-												<td>每行格数</td>
-												<td>操作</td>
-											</tr>
-										</thead>
-										<tbody class="user_body_right_foot_item_roada_table_tbody user_body_right_foot_item_roadc_tbody"></tbody>
-									</table>
-								</div>
-							</div>
-							<div class="user_body_right_foot_item_road user_body_right_foot_item_roadb">
-								<table class="user_body_right_foot_item_roadb_table">
-									<thead>
-										<tr style="background-color: #ffffff;">
-											<td>货道层</td>
-											<td>货道类型</td>
-										</tr>
-									</thead>
-									<tbody class="user_body_right_foot_item_roadc_tbody">
-										<tr>
-											<td>1</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>2</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>3</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>4</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>5</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>6</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>7</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>8</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>9</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>10</td>
-											<td><input class="user_body_right_foot_item_roadb_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-							<div class="user_body_right_foot_item_road user_body_right_foot_item_roadc">
-								<table class="user_body_right_foot_item_roadc_table">
-									<thead>
-										<tr style="background-color: #ffffff;">
-											<td>货道列</td>
-											<td>货道类型</td>
-										</tr>
-									</thead>
-									<tbody class="user_body_right_foot_item_roadc_tbody">
-										<tr>
-											<td>1</td>
-											<td><input class="user_body_right_foot_item_roadc_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>2</td>
-											<td><input class="user_body_right_foot_item_roadc_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>3</td>
-											<td><input class="user_body_right_foot_item_roadc_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-										<tr>
-											<td>4</td>
-											<td><input class="user_body_right_foot_item_roadc_table_int" type="text" style="cursor: pointer" readonly="readonly"/><b></b></td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-							<div class="user_body_right_foot_item_road user_body_right_foot_item_roadd">
-								<table class="user_body_right_foot_item_roadd_table">
-									<thead>
-										<tr style="background-color: #ffffff;">
-											<td>货道层</td>
-											<td>货道类型</td>
-											<td>商品最大值</td>
-										</tr>
-									</thead>
-									<tbody class="user_body_right_foot_item_roadc_tbody user_body_right_foot_item_roadd_tbody">
-									</tbody>
-								</table>
-							</div>
-						</div>
-						<div class="clear"></div>
-						<button style="margin-left: 640px; margin-right: 10px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btns user_body_right_foot_item_btnbb"><img src="image/mbdr.png"/>导入模板</button>
-						<button class="user_body_right_foot_item_btn user_body_right_foot_item_btnb"><img src="image/bc.png"/>保存</button>
-					</div>
-					<div class="user_body_right_foot_list" data-menuid="301003">
-						<div class="user_body_right_foot_item">
-							<p>商品配置</p>
-							<div class="user_body_right_foot_item_commodity user_body_right_foot_item_commoditya">
-								<table class="user_body_right_foot_item_commoditya_table user_body_right_foot_item_commoditya_thead">
-									<tr>
-										<td>货道</td>
-										<td>商品</td>
-										<td>商品数量</td>
-										<td>价格系数</td>
-									</tr>
-								</table>
-								<div class="user_body_right_foot_item_commoditya_div_tbody">
-									<table class="user_body_right_foot_item_commoditya_table user_body_right_foot_item_commoditya_tbody">
-									</table>
-								</div>
-							</div>
-							<button style="margin-left: 170px;margin-right: 10px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btns user_body_right_foot_item_btnba"><img src="image/mbcj.png"/>创建模版</button>
-							<button style="margin-right: 10px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btns user_body_right_foot_item_btnbc"><img src="image/mbsc.png"/>删除模板</button>
-							<button style="margin-right: 0px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btnca"><img src="image/bc.png"/>保存</button>
-						</div>
-						<div class="user_body_right_foot_item">
-							<p>库存预警<input class="user_body_right_foot_item_commodityb_int" type="number" placeholder="请输入预警值"/></p>
-							<div class="user_body_right_foot_item_commodity user_body_right_foot_item_commodityb">
-								<span>预警接收人</span>
-								<ul class="user_body_right_foot_item_commodityb_ul">
-								</ul>
-							</div>
-							<button style="margin-left: 225px;" class="user_body_right_foot_item_btn user_body_right_foot_item_commodityb_btn"><img src="image/bc.png"/>保存</button>
-						</div>
-						<div class="clear"></div>
-					</div>
-					<div class="user_body_right_foot_list" data-menuid="301004">
-						<div class="user_body_right_foot_item">
-							<p>补货管理</p>
-							<div class="user_body_right_foot_item_tonic" id="user_body_right_foot_item_tonic">
-								<p class="user_body_right_foot_item_tonic_p1">补货清单</p>
-								<div class="user_body_right_foot_item_tonic_head">
-									<table class="user_body_right_foot_item_tonic_head_table">
-									</table>
-								</div>
-								<p class="user_body_right_foot_item_tonic_p2">清出列表</p>
-								<div class="user_body_right_foot_item_tonic_bodya">
-									<table class="user_body_right_foot_item_tonic_bodya_table">
-										<thead>
-											<tr>
-												<td>序号</td>
-												<td>货道数据</td>
-												<td>商品名称</td>
-												<td>是否过期</td>
-												<td>清出数量</td>
-											</tr>
-										</thead>
-										<tbody class="user_body_right_foot_item_tonic_bodya_tbody">
-										</tbody>
-									</table>
-								</div>
-								<p class="user_body_right_foot_item_tonic_p3">补入商品汇总</p>
-								<div class="user_body_right_foot_item_tonic_bodyb">
-									<table class="user_body_right_foot_item_tonic_bodyb_table">
-										<thead>
-											<tr>
-												<td>序号</td>
-												<td>商品名称</td>
-												<td>商品总数量</td>
-											</tr>
-										</thead>
-										<tbody class="user_body_right_foot_item_tonic_bodyb_tbody">
-										</tbody>
-									</table>
-								</div>
-								<p class="user_body_right_foot_item_tonic_p4">补入明细</p>
-								<div class="user_body_right_foot_item_tonic_bodyc">
-									<table class="user_body_right_foot_item_tonic_bodyc_table">
-										<thead>
-											<tr>
-												<td>序号</td>
-												<td>货道数据</td>
-												<td>商品名称</td>
-												<td>数量</td>
-											</tr>
-										</thead>
-										<tbody class="user_body_right_foot_item_tonic_bodyc_tbody">
-										</tbody>
-									</table>
-								</div>
-							</div>
-							<button style="margin-left: 445px; margin-right: 10px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btncba"><img src="image/scqd.png"/>生成</button>
-							<button style="margin-right: 10px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btncbb"><img src="image/bhwc.png"/>补货完成</button>
-							<button style="margin-right: 10px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btncbc"><img src="image/dy.png"/>打印</button>
-							<button style="margin-right: 10px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btncbd"><img src="image/excelDwon.png"/>导出Excel</button>
-						</div>
-					</div>
-					<div class="user_body_right_foot_list" data-menuid="301005">
-						<div class="user_body_right_foot_item">
-							<p>价格</p>
-							<div class="user_body_right_foot_item_price">
-								<table class="user_body_right_foot_item_price_table">
-									<thead>
-										<tr>
-											<td>商品名称</td>
-											<td>商品编号</td>
-											<td>在售价格</td>
-										</tr>
-									</thead>
-									<tbody class="user_body_right_foot_item_price_tbody">
-									</tbody>
-								</table>
-							</div>
-						</div>
-						<div class="user_body_right_foot_item">
-							<p>库存</p>
-							<div class="user_body_right_foot_item_stock">
-								<table class="user_body_right_foot_item_stock_table">
-									<thead>
-										<tr>
-											<td>货道</td>
-											<td>商品名称</td>
-											<td>商品编号</td>
-											<td>补入时间</td>
-											<td>商品数量</td>
-										</tr>
-									</thead>
-									<tbody class="user_body_right_foot_item_stock_tbody">
-									</tbody>
-								</table>
-							</div>
-						</div>
-						<div class="clear"></div>
-						<button style="margin-left: 670px; margin-right: 10px;" class="user_body_right_foot_item_btn user_body_right_foot_item_btnda"><img src="image/sc.png"/>一键清空</button>
-						<button class="user_body_right_foot_item_btn user_body_right_foot_item_btndb"><img src="image/bc.png"/>保存</button>
-					</div>
-					<div class="user_body_right_foot_list" data-menuid="301006">
+					
+					<div class="user_body_right_foot_list" data-menuid="401002">
 						<div class="user_body_right_foot_item">
 							<p>远程控制</p>
 							<div class="user_body_right_foot_item_remote">
@@ -476,7 +226,7 @@
 						</div>
 						<div class="clear"></div>
 					</div>
-					<div class="user_body_right_foot_list" data-menuid="301007">
+					<div class="user_body_right_foot_list" data-menuid="401003">
 						<div class="user_body_right_foot_item">
 							<p>警报</p>
 							<div class="user_body_right_foot_item_alarm">
@@ -485,6 +235,8 @@
 									<span>上限(℃)：<input id="machine_temp_top" type="number"/></span>
 									<span>下限(℃)：<input id="machine_temp_bom" type="number"/></span>
 									<span>触发报警时长(分)：<input id="machine_temp_time" type="number" oninput="value=Math.abs(parseInt(value))"/></span>
+									<button id="machine_temp_open">开启</button>
+									<button id="machine_temp_close">关闭</button>
 								</p>
 								<div class="user_body_right_foot_item_alarm_left">
 									<p>故障信息</p>
@@ -501,44 +253,6 @@
 				</div>
 			</div>
 			<div class="clear"></div>
-		</div>
-	</div>
-	<!-- 导入模板div -->
-	<div class="user_body_right_foot_item_fixedbb">
-		<div class="user_body_right_foot_item_divbb">
-			<div class="user_body_right_foot_item_divbb_head">
-				<p>请选择需要导入的模板：</p>
-				<div class="user_body_right_foot_item_divbb_close" title="关闭当前窗口">×</div>
-				<div class="clear"></div>
-			</div>
-			<div class="user_body_right_foot_item_divbb_bHead">
-				<div>序号</div>
-				<div>模板ID</div>
-				<div>模版名称</div>
-				<div class="clear"></div>
-			</div>
-			<div class="user_body_right_foot_item_divbb_body"></div>
-			<div class="user_body_right_foot_item_divbb_foot">
-				<button class="user_body_right_foot_item_divbb_foot_btn">导入模板</button>
-			</div>
-		</div>
-	</div>
-	<!-- 删除模板div -->
-	<div class="user_body_right_foot_item_fixedbc">
-		<div class="user_body_right_foot_item_divbc">
-			<div class="user_body_right_foot_item_divbc_head">
-				<p>删除模板：</p>
-				<div class="user_body_right_foot_item_divbc_close" title="关闭当前窗口">×</div>
-				<div class="clear"></div>
-			</div>
-			<div class="user_body_right_foot_item_divbc_bHead">
-				<div>序号</div>
-				<div>模板ID</div>
-				<div>模版名称</div>
-				<div>操作</div>
-				<div class="clear"></div>
-			</div>
-			<div class="user_body_right_foot_item_divbc_body"></div>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/machine_commodity.js"></script>
