项目由企业模式更改为个人模式，主要工作内容为参数变更！

--- a/operator.html
+++ b/operator.html
@@ -102,7 +102,7 @@
 									<td>应用Secret：<span class="wechat_pay">*</span></td>
 									<td><input id="elem_store_secret" type="password"/></td>
 								</tr>
-								<tr>
+								<!-- <tr>
 									<td>回调URL：<span class="wechat_pay">*</span></td>
 									<td><input id="elem_store_redirecturl" type="text"/></td>
 								</tr>
@@ -121,14 +121,14 @@
 								<tr>
 									<td>推送地址：</td>
 									<td><input id="elem_store_pushUrl" type="text"/></td>
-								</tr>
+								</tr> -->
 								<tr>
 									<td>饿了么授权：</td>
-									<td><button class="elem_store_auth" id="elem_store_authorize">商家授权</button><button class="elem_store_auth" id="elem_store_authdelete">取消授权</button></td>
+									<td><!-- <button class="elem_store_auth" id="elem_store_authorize">商家授权</button> --><button class="elem_store_auth" id="elem_store_authdelete">取消授权</button></td>
 								</tr>
 							</table>
 						</div>
-						<div class="operator_body_right_foot_item">
+						<!-- <div class="operator_body_right_foot_item">
 							<p>美团平台</p>
 							<table>
 								<tr>
@@ -152,8 +152,8 @@
 									<td><button class="elem_store_auth" id="meituan_store_authorize">美团授权</button><button class="elem_store_auth" id="meituan_store_authdelete">取消授权</button></td>
 								</tr>
 							</table>
-						</div>
-						<div class="operator_body_right_foot_item">
+						</div> -->
+						<!-- <div class="operator_body_right_foot_item">
 							<p>客如云</p>
 							<table>
 								<tr>
@@ -185,7 +185,7 @@
 									<td><input id="silver_test" type="password"/></td>
 								</tr>
 							</table>
-						</div>
+						</div> -->
 						<!-- <div class="operator_body_right_foot_item">
 							<p>工行</p>
 							<table>
