部分文本与图标更换

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<title>浙江嘉丰机电-后台管理系统</title>
+	<title>稻吟外卖管理平台</title>
 	<link rel="icon" type="image/x-icon" href="image/logos.jpg"/>
 	<link rel="stylesheet" type="text/css" href="css/index.css"/>
 	<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
