--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<title>鸿丰智能终端管理系统</title>
+	<title>稻吟外卖管理平台</title>
 	<link href="images/logo.jpg" type="image/x-icon" rel="icon"/>
 	<link rel="stylesheet" type="text/css" href="css/login.css"/>
 	<!-- <script type="text/javascript" src="js/object.js"></script> -->
