--- a/operator.html
+++ b/operator.html
@@ -122,10 +122,10 @@
 									<td>推送地址：</td>
 									<td><input id="elem_store_pushUrl" type="text"/></td>
 								</tr> -->
-								<tr>
+								<!-- <tr>
 									<td>饿了么授权：</td>
-									<td><!-- <button class="elem_store_auth" id="elem_store_authorize">商家授权</button> --><button class="elem_store_auth" id="elem_store_authdelete">取消授权</button></td>
-								</tr>
+									<td><button class="elem_store_auth" id="elem_store_authorize">商家授权</button><button class="elem_store_auth" id="elem_store_authdelete">取消授权</button></td>
+								</tr> -->
 							</table>
 						</div>
 						<!-- <div class="operator_body_right_foot_item">
