--- a/login.html
+++ b/login.html
@@ -29,11 +29,8 @@
 		</div>
 	</div>
 	<script type="text/javascript">
-		//var URLZ = 'http://7daqrw.natappfree.cc/bg-uc';
-		//var URLZ = 'http://test.hontech-rdcenter.com:8080/bg-uc';
-		//var URLZ = 'https://api.hontech-rdcenter.com:8443/bg-uc';
-		//var URLZ = 'http://hfrd.hontech-rdcenter.com:8080/hontechgroup';
 		//var URLZ = 'http://10.1.8.34:8080/bg-uc';
+		//var URLZ = 'http://10.1.8.36:8080/bg-uc';
 		var URLZ = 'https://api.daoyin.tech:8443';
 		//context.style.backgroundColor = 'rgba(0,73,162,1)';
 		c('login')[0].style.marginTop = -(Number(c('login')[0].clientHeight)/2)/2 + 'px';
