--- a/order_center.html
+++ b/order_center.html
@@ -30,12 +30,16 @@
 							<tr>
 								<td>平台</td>
 								<td>订单号</td>
+								<td>流水号</td>
 								<td>商品信息</td>
 								<td>金额（元）</td>
 								<td>联系人</td>
 								<td>联系电话</td>
+								<td>真实电话</td>
 								<td>下单地址</td>
 								<td>下单时间</td>
+								<td>订单类型</td>
+								<td>预计送达时间</td>
 								<td>操作</td>
 							</tr>
 						</thead>
@@ -61,12 +65,16 @@
 								<td>多选</td>
 								<td>平台</td>
 								<td>订单号</td>
+								<td>流水号</td>
 								<td>商品信息</td>
 								<td>金额（元）</td>
 								<td>联系人</td>
 								<td>联系电话</td>
+								<td>真实电话</td>
 								<td>下单地址</td>
 								<td>下单时间</td>
+								<td>订单类型</td>
+								<td>预计送达时间</td>
 								<td>操作</td>
 							</tr>
 						</thead>
@@ -94,12 +102,16 @@
 							<tr>
 								<td>平台</td>
 								<td>订单号</td>
+								<td>流水号</td>
 								<td>商品信息</td>
 								<td>金额（元）</td>
 								<td>联系人</td>
 								<td>联系电话</td>
+								<td>真实电话</td>
 								<td>下单地址</td>
 								<td>下单时间</td>
+								<td>订单类型</td>
+								<td>预计送达时间</td>
 								<td>操作</td>
 							</tr>
 						</thead>
@@ -126,12 +138,16 @@
 							<tr>
 								<td>平台</td>
 								<td>订单号</td>
+								<td>流水号</td>
 								<td>商品信息</td>
 								<td>金额（元）</td>
 								<td>联系人</td>
 								<td>联系电话</td>
+								<td>真实电话</td>
 								<td>下单地址</td>
 								<td>下单时间</td>
+								<td>订单类型</td>
+								<td>预计送达时间</td>
 								<td>操作</td>
 							</tr>
 						</thead>
