--- a/order_search.html
+++ b/order_search.html
@@ -24,7 +24,7 @@
 						</td>
 						<td>订单状态</td>
 						<td>
-							<input class="statisticalMethods wm_select" data-select="[{value:'settled,,successful',name:'已完成'},{value:',successful,',name:'取消/退单'}]" type="text" placeholder="请选择..." readonly="readonly"/>
+							<input class="statisticalMethods wm_select" data-select="[{value:'settled,,successful',name:'已完成'},{value:',successful,',name:'取消/退单'},{value:'shipping,,',name:'已出货'}]" type="text" placeholder="请选择..." readonly="readonly"/>
 							<b></b>
 						</td>
 						<td>日期选择</td>
