饿了么规格ID显示

--- a/commodity_board.html
+++ b/commodity_board.html
@@ -45,7 +45,7 @@
 			<div class="operator_body_right">
 				<div class="operator_body_right_head">
 					<button id="body_creat"><span>+</span>创建</button>
-					<button id="body_submit"><img src="image/bc.png"/>保存</button>					
+					<button id="body_submit"><img src="image/bc.png"/>保存</button>
 					<div class="operator_body_right_head_bottom">
 						<ul class="operator_body_right_head_bottom_ul"></ul>
 					</div>
@@ -66,6 +66,10 @@
 								<tr>
 									<td>饿了么商品ID：</td>
 									<td><input id="commodity_elemid" type="text" disabled="disabled" placeholder="此ID只能导入" /></td>
+								</tr>
+								<tr>
+									<td>饿了么规格ID：</td>
+									<td><input id="commodity_specid" type="text" disabled="disabled" placeholder="此ID只能导入" /></td>
 								</tr>
 								<tr>
 									<td>商品名称：<span>*</span></td>
